--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="container">
+    <button class="add-todo-btn" mat-raised-button color="primary" (click)="addTodo()">Add todo</button>
+    <mat-card>
+        <p>My todo</p>
+        <button mat-stroked-button color="primary">Mark as Complate</button>
+    </mat-card>
+</div>
