--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="container">
     <button class="add-todo-btn" mat-raised-button color="primary" (click)="addTodo()">Add todo</button>
-    <mat-card>
-        <p>My todo</p>
-        <button mat-stroked-button color="primary">Mark as Complate</button>
-    </mat-card>
+    <mat-spinner *ngIf="loading"></mat-spinner>
+    <ng-container *ngIf="!loading">
+        <mat-card *ngFor="let todo of todos">
+            <p>{{ todo.title }}</p>
+            <button mat-stroked-button color="primary">Mark as Complate</button>
+        </mat-card>
+    </ng-container>
+   
 </div>
