--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <mat-spinner *ngIf="loading"></mat-spinner>
     <ng-container *ngIf="!loading">
         <mat-card *ngFor="let todo of todos">
-            <p>{{ todo.title }}</p>
-            <button mat-stroked-button color="primary">Mark as Complate</button>
+            <p [ngClass]="{complete: todo.status === 'done'}" >{{ todo.title }}</p>
+            <button mat-stroked-button color="primary" (click)="markAsComplete(todo._id)">Mark as Complate</button>
         </mat-card>
     </ng-container>
    
