--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,8 @@
     <ng-container *ngIf="!loading">
         <mat-card *ngFor="let todo of todos">
             <p [ngClass]="{complete: todo.status === 'done'}" >{{ todo.title }}</p>
-            <button mat-stroked-button color="primary" (click)="markAsComplete(todo._id)">Mark as Complate</button>
+            <button *ngIf="todo.status === 'open'" mat-stroked-button color="primary" (click)="markAsComplete(todo._id)">Mark as Complate</button>
+            <button *ngIf="todo.status === 'done'" mat-stroked-button color="primary" (click)="deleteTodo(todo._id)">Delete</button>
         </mat-card>
     </ng-container>
    
